# esp32_toy

./: CMakeLists.txt  README.md
components/Toy/: CMakeLists.txt  makefile
components/Toy/include/: toy_common.h  toy_compiler.h  toy_literal.h  toy_literal_array.h  toy_literal_dictionary.h  toy_parser.h
components/Toy/include/common/: toy_opcodes.h
components/Toy/include/interpreter/: toy_scope.h
components/Toy/repl_main/: toy_repl_main.c
components/Toy/source/: makefile  toy_drive_system.c
components/Toy/test/scripts/lib/runner/: sample_bytecode.tb
components/Toy/tools/: uptown.cpp
components/Toy/tools/memusage/: main.c
components/Toy/tools/toylang.vscode-highlighting/syntaxes/: toy.tmLanguage.json
components/Toy_library/: CMakeLists.txt
components/Toy_repl_main_esp32/: CMakeLists.txt  repl_main.c  repl_main.h
components/esp32_toy_libs/: CMakeLists.txt
components/toy_lang/: CMakeLists.txt
components/toy_lang/Toy/: README.md
components/toy_lang/Toy/common/include/: toy_common.h  toy_literal_array.h  toy_memory.h  toy_refstring.h
components/toy_lang/Toy/common/source/: toy_common.c
components/toy_lang/Toy/compiler/include/: toy_ast_node.h  toy_compiler.h  toy_lexer.h  toy_parser.h
components/toy_lang/Toy/compiler/source/: toy_compiler.c
components/toy_lang/Toy/interpreter/include/: toy_interpreter.h  toy_keyword_types.h  toy_literal.h  toy_literal_dictionary.h  toy_reffunction.h  toy_scope.h
components/toy_lang/Toy/scripts/: fib.toy
components/toy_lang/Toy/tools/memusage/: makefile
main/: CMakeLists.txt  main.c
temp/: main_old.c
(+13 files in other folders)
